--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dotenv": "16.0.3",
+    "ethers": "5.7.2",
     "helmet": "6.1.5",
     "ioredis": "5.3.2",
     "lodash": "4.17.21",
