--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ DATABASE_PASSWORD=1
 DATABASE_NAME=default
 DATABASE_LOG_ENABLE=true
 DATABASE_LIMIT_CONNECTION=5
+
+# thegraph api-key
+THE_GRAPH_API_KEY=
+
+# rpc RPC_URLS_${CHAINID}
+RPC_URLS_1=
